--- a/main/WebShutterUI.ui
+++ b/main/WebShutterUI.ui
@@ -85,9 +85,9 @@
        </item>
        <item row="0" column="3">
         <widget class="QPushButton" name="searchButton">
-         <property name="text">
+         <!--<property name="text">
           <string>Search</string>
-         </property>
+         </property>-->
         </widget>
        </item>
        <item row="0" column="5">
