--- a/main/WebShutterUI.ui
+++ b/main/WebShutterUI.ui
@@ -23,9 +23,9 @@
          <property name="enabled">
           <bool>true</bool>
          </property>
-         <property name="text">
+         <!--<property name="text">
           <string>Start</string>
-         </property>
+         </property>-->
         </widget>
        </item>
        <item row="0" column="2">
@@ -92,9 +92,9 @@
        </item>
        <item row="0" column="5">
         <widget class="QPushButton" name="deleteButton">
-         <property name="text">
+         <!--<property name="text">
           <string>Delete</string>
-         </property>
+         </property>-->
         </widget>
        </item>
       </layout>
