Delete and search implementation

--- a/main/WebShutterUI.ui
+++ b/main/WebShutterUI.ui
@@ -63,7 +63,7 @@
          </item>
          <item>
           <property name="text">
-           <string>Link</string>
+           <string>URL</string>
           </property>
          </item>
          <item>
