--- a/main/WebShutterUI.ui
+++ b/main/WebShutterUI.ui
@@ -18,27 +18,16 @@
     <item>
      <widget class="QWidget" name="widget" native="true">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="6">
-        <widget class="QPushButton" name="startStopButton">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <!--<property name="text">
-          <string>Start</string>
-         </property>-->
-        </widget>
-       </item>
-       <item row="0" column="2">
+       <item row="0" column="1">
         <widget class="QLineEdit" name="searchLine"/>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="filterLabel">
-         <property name="text">
-          <string>Filter:</string>
-         </property>
-        </widget>
+       <item row="0" column="2">
+        <widget class="QPushButton" name="searchButton"/>
        </item>
        <item row="0" column="4">
+        <widget class="QPushButton" name="deleteButton"/>
+       </item>
+       <item row="0" column="3">
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -54,7 +43,7 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="1">
+       <item row="0" column="0">
         <widget class="QComboBox" name="filterCombo">
          <item>
           <property name="text">
@@ -71,30 +60,13 @@
            <string>Status</string>
           </property>
          </item>
-         <item>
-          <property name="text">
-           <string>Checked</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Unchecked</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QPushButton" name="searchButton">
-         <!--<property name="text">
-          <string>Search</string>
-         </property>-->
         </widget>
        </item>
        <item row="0" column="5">
-        <widget class="QPushButton" name="deleteButton">
-         <!--<property name="text">
-          <string>Delete</string>
-         </property>-->
+        <widget class="QPushButton" name="startStopButton">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
@@ -108,26 +80,20 @@
      <x>0</x>
      <y>0</y>
      <width>581</width>
-     <height>28</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionPreferences"/>
+    <addaction name="preferences"/>
     <addaction name="action_Exit"/>
    </widget>
-   <widget class="QMenu" name="menuAbout">
-    <property name="title">
-     <string>About</string>
-    </property>
-   </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionPreferences">
+  <action name="preferences">
    <property name="text">
     <string>Preferences</string>
    </property>
