--- a/main/WebShutterUI.ui
+++ b/main/WebShutterUI.ui
@@ -17,32 +17,7 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QWidget" name="widget" native="true">
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="searchLine"/>
-       </item>
-       <item row="0" column="2">
-        <widget class="QPushButton" name="searchButton"/>
-       </item>
-       <item row="0" column="4">
-        <widget class="QPushButton" name="deleteButton"/>
-       </item>
-       <item row="0" column="3">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Expanding</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
+      <layout class="QGridLayout" name="gridLayout" rowstretch="0" rowminimumheight="0">
        <item row="0" column="0">
         <widget class="QComboBox" name="filterCombo">
          <item>
@@ -62,10 +37,86 @@
          </item>
         </widget>
        </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="searchLine"/>
+       </item>
+       <item row="0" column="6">
+        <widget class="QComboBox" name="dimensionsCombo"/>
+       </item>
+       <item row="0" column="4">
+        <widget class="QRadioButton" name="mobileRadioButton">
+         <property name="text">
+          <string>Mobile</string>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="5">
+        <widget class="QRadioButton" name="desktopRadioButton">
+         <property name="text">
+          <string>Desktop</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <widget class="QPushButton" name="searchButton">
+         <property name="text">
+          <string>Search</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="widget_2" native="true">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <!--<item>
+        <widget class="QPushButton" name="addButton">
+         <property name="text">
+          <string>Add</string>
+         </property>
+        </widget>
+      </item>-->
+       <item>
+        <widget class="QPushButton" name="deleteButton">
+         <property name="text">
+          <string>Delete</string>
+         </property>
+         <property name="shortcut">
+          <string>Ctrl+S</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="startStopButton">
-         <property name="enabled">
-          <bool>true</bool>
+         <property name="text">
+          <string>Start</string>
          </property>
         </widget>
        </item>
@@ -74,35 +125,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>581</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>Fi&amp;le</string>
-    </property>
-    <addaction name="preferencesAction"/>
-    <addaction name="exitAction"/>
-   </widget>
-   <addaction name="menuFile"/>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <action name="preferencesAction">
-   <property name="text">
-    <string>&amp;Preferences</string>
-   </property>
-  </action>
-  <action name="exitAction">
-   <property name="text">
-    <string>&amp;Exit</string>
-   </property>
-  </action>
  </widget>
  <resources/>
  <connections/>
